--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,42 +1,51 @@
-<footer class="footer">
+<footer class="site-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <h6>Sobre Nosotros</h6>
+                <p class="text-justify">En DSP BIM, somos pioneros en ofrecer soluciones de Diseño BIM. Nuestro equipo
+                    combina experiencia técnica y
+                    creatividad para transformar ideas en realidad, asegurando eficiencia y precisión en cada proyecto.
+                    Nos dedicamos a modelar, diseñar y optimizar espacios con la más avanzada tecnología BIM.</p>
+            </div>
 
-    <div class="footer-left">
+            <div class="col-xs-6 col-md-3">
+                <h6>Servicios</h6>
+                <ul class="footer-links">
+                    <li><a href="A-S">As Built</a></li>
+                    <li><a href="B-A">BIM Arquitectonico</a></li>
+                    <li><a href="B-E">BIM Estructural</a></li>
+                    <li><a href="D-C">Deteccion de Conflictos</a></li>
+                    <li><a href="D-E">Documentacion Ejecutiva</a></li>
+                    <li><a href="MEP">MEP</a></li>
+                </ul>
+            </div>
 
-        <p class="footer-links">
-            <a href="/">Inicio</a>
-            /
-            <a href="/nosotros">Nosotros</a>
-            /
-            <a href="/contacto">Contacto</a>
-        </p>
-
-        <p class="footer-company-name">Copyright © 2024 <strong>DSPBIM</strong> All rights reserved</p>
+            <div class="col-xs-6 col-md-3">
+                <h6>Quick Links</h6>
+                <ul class="footer-links">
+                    <li><a href="/">Inicio</a></li>
+                    <li><a href="nosotros">Nosotros</a></li>
+                    <li><a href="contacto">Contacto</a></li>
+                    <li><a href="proyectos">Proyectos</a></li>
+                </ul>
+            </div>
+        </div>
+        <hr>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+                <p class="footer-company-name">Copyright © 2024 <strong>DSPBIM</strong> All rights reserved</p>
+            </div>
 
-    <div class="footer-center">
-        <div>
-            <i class="fa fa-map-marker"></i>
-            <p><span>CIPOLLETTI</span>
-                RioNegro</p>
-        </div>
-
-        <div>
-            <i class="fa fa-phone"></i>
-            <p>+54 9 2994239438</p>
-        </div>
-        <div>
-            <i class="fa fa-envelope"></i>
-            <p><a href="">dspBim gmail.com</a></p>
-        </div>
-    </div>
-    <div class="footer-right">
-        <p class="footer-company-about">Seguinos!</p>
-        <div class="footer-icons">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-youtube"></i></a>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <ul class="social-icons">
+                    <li><a class="facebook" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a class="twitter" href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a class="linkedin" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </footer>
