--- a/src/app/layout/nav-bar/nav-bar.component.css
+++ b/src/app/layout/nav-bar/nav-bar.component.css
@@ -71,6 +71,10 @@
         transition: .2s;
     }
 
+    .navbar {
+        margin-left: auto;
+    }
+
     .navbar a {
         font-size: 1.4rem;
     }
@@ -100,11 +104,12 @@
         }
 
         .navbar {
+            margin-left: auto;
             position: absolute;
             top: 100%;
             left: 6%;
             width: 330px;
-            height: 217px;
+            height: 250px;
             margin-top: 2px;
             display: flex;
             flex-direction: column;
@@ -136,8 +141,11 @@
         }
 
         .open {
-            display: block;
+            flex-wrap: nowrap;
             transition: all .50s ease;
+            background-color: #292929b6;
+            padding: 10px;
+
         }
     }
 
@@ -152,10 +160,11 @@
         }
 
         .navbar {
+            margin-left: auto;
             position: absolute;
             left: 0;
             width: 100%;
-            height: 217px;
+            height: 250px;
             display: flex;
             flex-direction: column;
             justify-content: center;
