--- a/src/app/pages/proyectos/proyectos.component.html
+++ b/src/app/pages/proyectos/proyectos.component.html
@@ -1,7 +1,7 @@
 <div class="banner">
     <h1>Proyectos</h1>
 </div>
-<div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExample" class="carousel slide" data-bs-ride="carousel" style="margin-bottom: 100px;">
     <div class="carousel-inner">
         <div class="carousel-item" *ngFor="let proyecto of proyectos; let i = index" [class.active]="i === 0">
             <div class="container">
