--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -189,6 +189,8 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .tarjeta {
@@ -232,13 +234,13 @@
 
 .ver-mas {
     font-size: 3.5vw;
-    color: #007bff;
+    color: #d9a571;
     cursor: pointer;
     transition: color 0.3s ease;
 }
 
 .ver-mas:hover {
-    color: #0056b3;
+    color: #ac8054;
 }
 
 @media (min-width: 768px) {
