--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,23 +1,28 @@
 <div class="banner">
     <div class="contact-form">
         <div class="first-container">
-            <div class="info-container">
+            <div style="width: 320px;" class="info-container" >
                 <div class="title">
                     <h3>Informacion de contacto</h3>
                 </div>
                 <div>
-                    <p>+54 9 2994239438</p>
+                    
+                    <p style="font-size: 18px;"><i  class="fa-solid fa-envelope" style="color: #ffffff; margin-right: 15px; "></i>informacion&#64;dspbim.com</p>
+                    
                 </div>
                 <div>
-                    <p>dspbim a gmail.com</p>
+                    
+                    <p><i class="fa-solid fa-phone" style="color:#ffffff; margin-right: 15px;"></i>+54 9 2994239438</p>
                 </div>
+
                 <div>
-                    <p>General Fernandez Oro, Rio Negro</p>
+                    <p><i class="fa-solid fa-location-dot" style="color: #ffffff; margin-right: 15px; "></i>General Fernandez Oro, <br>Rio Negro</p>
                 </div>
+
             </div>
         </div>
         <div class="second-container">
-            <form>
+            <form class="ramirez">
                 <div class="form-group">
                     <div class="group">
                         <input required="" type="text" class="input" />
