--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -3,275 +3,247 @@
     position: relative;
     background: url(../../../assets/carrucel3.jpg) no-repeat center;
     background-size: cover;
-    display: grid;
-    place-content: center;
-}
-
-.banner h1 {
-    font-size: 30px;
-    font-weight: 300;
-    color: #fff;
-}
-
-/*DSÑKFJ{ÑLK{ÑDKLASFÑKASÑDFKÑLASKDFÑKSÑDFÑLASKDFÑLKASÑDFKÑKLASDFÑKÑSDKÑF*/
-
-
-
-.boxesContainer {
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin-top: 100px;
-}
-
-.cardBox {
-    float: left;
-    font-size: 0.8em;
-    margin: 1% 0 0 1%;
-    perspective: 800px;
-    transition: all 0.3s ease 0s;
-    width: 23.7%;
     align-items: center;
-    justify-content: center;
 }
 
-.cardBox:hover .card {
-    transform: rotateY(180deg);
-}
-
-.card {
-    background: #F2E9DF;
-    cursor: default;
-    height: 500px;
-    transform-style: preserve-3d;
-    transition: transform 0.4s ease 0s;
-    width: 100%;
-    -webkit-animation: giro 1s 1;
-    animation: giro 1s 1;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.card p {
-    margin-bottom: 1.8em;
-}
-
-.card .front,
-.card .back {
-    backface-visibility: hidden;
-    box-sizing: border-box;
-    color: #1E2123;
-    display: flex;
-    font-size: 1.2em;
-    height: 100%;
+.contact-form {
     position: absolute;
-    text-align: center;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.card .front strong {
-    background: #fff;
-    border-radius: 100%;
-    color: #222;
-    font-size: 1.5em;
-    line-height: 30px;
-    padding: 0 7px 4px 6px;
-}
-
-.card .back {
-    transform: rotateY(180deg);
-}
-
-.card .back a {
-    padding: 0.3em 0.5em;
-    background: #333;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 1px;
-    font-size: 0.9em;
-    transition: all 0.2s ease 0s;
-}
-
-.card .back a:hover {
-    background: #fff;
-    color: #333;
-    text-shadow: 0 0 1px #333;
-}
-
-
-
-.cardBox:nth-child(2) .card {
-    -webkit-animation: giro 1.5s 1;
-    animation: giro 1.5s 1;
-}
-
-.cardBox:nth-child(3) .card {
-    -webkit-animation: giro 2s 1;
-    animation: giro 2s 1;
-}
-
-.cardBox:nth-child(4) .card {
-    -webkit-animation: giro 2.5s 1;
-    animation: giro 2.5s 1;
-}
-
-@-webkit-keyframes giro {
-    from {
-        transform: rotateY(180deg);
-    }
-
-    to {
-        transform: rotateY(0deg);
-    }
-}
-
-@keyframes giro {
-    from {
-        transform: rotateY(180deg);
-    }
-
-    to {
-        transform: rotateY(0deg);
-    }
-}
-
-@media screen and (max-width: 767px) {
-    .boxesContainer {
-        display: block;
-        /* Cambio a display block para apilar los elementos */
-    }
-
-    .cardBox {
-        width: 94%;
-        /* Ajusta este valor según necesites */
-        margin: 10px auto;
-        /* Centra las tarjetas y añade un poco de margen entre ellas */
-        float: none;
-        /* Anula el float de los .cardBox */
-    }
-
-    .card {
-        height: 285px;
-        /* Puedes ajustar la altura según necesites */
-    }
-
-    /* Elimina margin-bottom del último .cardBox si es necesario */
-    .cardBox:last-child {
-        margin-bottom: 10px;
-        /* Ajusta según necesites */
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .cardBox {
-        width: 94.5%;
-    }
-
-    .card {
-        height: 260px;
-    }
-}
-
-/*perfiles*/
-.informacion-adicional {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s ease-out;
-}
-
-
-.contenedor-tarjetas {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
-.tarjeta {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     width: 90%;
-    max-width: 640px;
-    margin: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    overflow: hidden;
-    transition: box-shadow 0.3s ease;
+    height: 55%;
+    display: flex;
+    background: #ffffffb1;
+    margin: 6rem 0 0 0;
+    border-radius: 10px;
+    padding: 5px;
 }
 
-.tarjeta:hover {
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+.contact-form .first-container {
+    background: #292929;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
 }
 
-.contenedor-imagen {
+.contact-form .first-container .info-container {
+    padding: 10px;
+}
+
+.contact-form .first-container .info-container .title {
+    margin-bottom: 40px;
+}
+
+.contact-form .first-container .info-container h3 {
+    color: #fff;
+    font-size: 28px;
+    font-weight: 600;
+    padding-bottom: 10px;
+}
+
+.contact-form .first-container .info-container p {
+    color: #fff;
+    font-size: 15px;
+    font-weight: 400;
+    padding-bottom: 10px;
+}
+
+.contact-form .first-container .info-container div p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #fff;
+}
+
+.second-container {
     width: 100%;
 }
 
-.contenedor-imagen img {
+.form-group {
+    display: flex;
+}
+
+.form-group .group {
+    width: 50%;
+}
+
+.group {
+    margin: 20px;
+}
+
+@media screen and (max-width: 1628px) {
+  
+
+    .contact-form {
+        width: 90%;
+        height: 55%;
+    }
+    .i{
+        margin-right: 10px;
+    }
+}
+
+
+@media screen and (max-width: 700px) {
+    .contact-form {
+        flex-direction: column-reverse;
+       height: 700px;
+
+
+    }
+
+    .i{
+        margin-right: 10px;
+    }
+
+}
+
+/*INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT*/
+.group {
+    position: relative;
+}
+
+.input {
+    font-size: 16px;
+    padding: 10px 10px 10px 5px;
+    display: block;
     width: 100%;
-    height: auto;
-    object-fit: cover;
+    border: none;
+    border-bottom: 1px solid #515151;
+    background: transparent;
 }
 
-.contenido-texto {
-    padding: 15px;
+.input:focus {
+    outline: none;
 }
 
-.contenido-texto h2 {
-    font-size: 5vw;
+label {
+    color: #000;
+    font-size: 18px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 10px;
+    transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -webkit-transition: 0.2s ease all;
 }
 
-.contenido-texto p {
-    font-size: 3.5vw;
+.input:focus~label,
+.input:valid~label {
+    top: -20px;
+    font-size: 14px;
+    color: #000;
 }
 
-.ver-mas {
-    font-size: 3.5vw;
-    color: #d9a571;
-    cursor: pointer;
-    transition: color 0.3s ease;
+.bar {
+    position: relative;
+    display: block;
+    width: 100%;
 }
 
-.ver-mas:hover {
-    color: #ac8054;
+.bar:before,
+.bar:after {
+    content: "";
+    height: 2px;
+    width: 0;
+    bottom: 1px;
+    position: absolute;
+    background: #000;
+    transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -webkit-transition: 0.2s ease all;
 }
 
-@media (min-width: 768px) {
-    .tarjeta {
-        flex-direction: row;
-        align-items: flex-start;
+.bar:before {
+    left: 50%;
+}
+
+.bar:after {
+    right: 50%;
+}
+
+.input:focus~.bar:before,
+.input:focus~.bar:after {
+    width: 50%;
+}
+
+.highlight {
+    position: absolute;
+    height: 60%;
+    width: 100px;
+    top: 25%;
+    left: 0;
+    pointer-events: none;
+    opacity: 0.5;
+}
+
+.input:focus~.highlight {
+    animation: inputHighlighter 0.3s ease;
+}
+
+@keyframes inputHighlighter {
+    from {
+        background: #000;
     }
 
-    .contenedor-imagen {
-        flex: 0 0 250px;
-    }
-
-    .contenido-texto {
-        flex: 1;
-        padding: 20px;
-    }
-
-    .contenido-texto h2,
-    .contenido-texto p,
-    .ver-mas {
-        font-size: 1rem;
+    to {
+        width: 0;
+        background: transparent;
     }
 }
 
-@media (max-width: 480px) {
-    .contenido-texto h2 {
-        font-size: 6vw;
+.link {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    padding: 20px;
+
+    a {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: #000;
     }
 
-    .contenido-texto p,
-    .ver-mas {
-        font-size: 4vw;
+    .fa {
+        font-size: 28px;
+        margin-right: 8px;
+        color: #000;
     }
 }
+
+
+/*ddd*/
+.dropdown {
+    display: flex;
+}
+
+
+
+#selectService option {
+    font-size: 14px;
+    padding: 5px 10px;
+    /* Padding horizontal y vertical */
+}
+
+#selectService option:hover {
+    font-size: 16px;
+    padding: 10px 10px 10px 5px;
+    display: block;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #515151;
+    background: transparent;
+}
+
+#selectService option:checked {
+    font-size: 16px;
+    padding: 10px 10px 10px 5px;
+    display: block;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #515151;
+    background: transparent;
+}
+
