--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -1,249 +1,287 @@
 .banner {
     height: 100dvh;
     position: relative;
-    background: url(../../../assets/carrucel3.jpg) no-repeat center;
+    background: url(../../../assets/elsapato2.svg) no-repeat center;
     background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.contact-form {
-    position: absolute;
-    width: 90%;
-    height: 55%;
-    display: flex;
-    background: #ffffffb1;
-    margin: 6rem 0 0 0;
-    border-radius: 10px;
-    padding: 5px;
-}
-
-.contact-form .first-container {
-    background: #292929;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-}
-
-.contact-form .first-container .info-container {
-    padding: 10px;
-}
-
-.contact-form .first-container .info-container .title {
-    margin-bottom: 40px;
-}
-
-.contact-form .first-container .info-container h3 {
-    color: #fff;
-    font-size: 28px;
-    font-weight: 600;
-    padding-bottom: 10px;
-}
-
-.contact-form .first-container .info-container p {
-    color: #fff;
-    font-size: 15px;
-    font-weight: 400;
-    padding-bottom: 10px;
-}
-
-.contact-form .first-container .info-container div p {
-    font-size: 18px;
-    line-height: 1.6;
-    color: #fff;
-}
-
-.second-container {
+    display: grid;
+    place-content: center;
     width: 100%;
+
 }
 
-.form-group {
-    display: flex;
-}
-
-.form-group .group {
-    width: 50%;
-}
-
-.group {
-    margin: 20px;
-}
-
-@media screen and (max-width: 1628px) {
+.fade-in-text {
+    font-family: Arial;
+    font-size: 150px;
+    animation: fadeIn 5s;
+  }
   
-
-    .contact-form {
-        width: 90%;
-        height: 55%;
-    }
-    .i{
-        margin-right: 10px;
-    }
+  @keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+.banner h1 {
+    font-size: 30px;
+    font-weight: 300;
+    color: #fff;
 }
 
-
-@media screen and (max-width: 700px) {
-    .contact-form {
-        flex-direction: column-reverse;
-       height: 700px;
+/*DSÑKFJ{ÑLK{ÑDKLASFÑKASÑDFKÑLASKDFÑKSÑDFÑLASKDFÑLKASÑDFKÑKLASDFÑKÑSDKÑF*/
 
 
-    }
 
-    .i{
-        margin-right: 10px;
-    }
-
+.boxesContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
 }
 
-/*INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT*/
-.group {
-    position: relative;
+.cardBox {
+    float: left;
+    font-size: 0.8em;
+    margin: 1% 0 0 1%;
+    perspective: 800px;
+    transition: all 0.3s ease 0s;
+    width: 23.7%;
+    align-items: center;
+    justify-content: center;
 }
 
-.input {
-    font-size: 16px;
-    padding: 10px 10px 10px 5px;
-    display: block;
+.cardBox:hover .card {
+    transform: rotateY(180deg);
+}
+
+.card {
+    background: #F2E9DF;
+    cursor: default;
+    height: 500px;
+    transform-style: preserve-3d;
+    transition: transform 0.4s ease 0s;
     width: 100%;
-    border: none;
-    border-bottom: 1px solid #515151;
-    background: transparent;
+    -webkit-animation: giro 1s 1;
+    animation: giro 1s 1;
+    align-items: center;
+    justify-content: center;
+
 }
 
-.input:focus {
-    outline: none;
+.card p {
+    margin-bottom: 1.8em;
 }
 
-label {
-    color: #000;
-    font-size: 18px;
-    font-weight: normal;
+.card .front,
+.card .back {
+    backface-visibility: hidden;
+    box-sizing: border-box;
+    color: #1E2123;
+    display: flex;
+    font-size: 1.2em;
+    height: 100%;
     position: absolute;
-    pointer-events: none;
-    left: 5px;
-    top: 10px;
-    transition: 0.2s ease all;
-    -moz-transition: 0.2s ease all;
-    -webkit-transition: 0.2s ease all;
-}
-
-.input:focus~label,
-.input:valid~label {
-    top: -20px;
-    font-size: 14px;
-    color: #000;
-}
-
-.bar {
-    position: relative;
-    display: block;
+    text-align: center;
     width: 100%;
+    align-items: center;
+    justify-content: center;
+
 }
 
-.bar:before,
-.bar:after {
-    content: "";
-    height: 2px;
-    width: 0;
-    bottom: 1px;
-    position: absolute;
-    background: #000;
-    transition: 0.2s ease all;
-    -moz-transition: 0.2s ease all;
-    -webkit-transition: 0.2s ease all;
+.card .front strong {
+    background: #fff;
+    border-radius: 100%;
+    color: #222;
+    font-size: 1.5em;
+    line-height: 30px;
+    padding: 0 7px 4px 6px;
 }
 
-.bar:before {
-    left: 50%;
+.card .back {
+    transform: rotateY(180deg);
 }
 
-.bar:after {
-    right: 50%;
+.card .back a {
+    padding: 0.3em 0.5em;
+    background: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 1px;
+    font-size: 0.9em;
+    transition: all 0.2s ease 0s;
 }
 
-.input:focus~.bar:before,
-.input:focus~.bar:after {
-    width: 50%;
+.card .back a:hover {
+    background: #fff;
+    color: #333;
+    text-shadow: 0 0 1px #333;
 }
 
-.highlight {
-    position: absolute;
-    height: 60%;
-    width: 100px;
-    top: 25%;
-    left: 0;
-    pointer-events: none;
-    opacity: 0.5;
+
+
+.cardBox:nth-child(2) .card {
+    -webkit-animation: giro 1.5s 1;
+    animation: giro 1.5s 1;
 }
 
-.input:focus~.highlight {
-    animation: inputHighlighter 0.3s ease;
+.cardBox:nth-child(3) .card {
+    -webkit-animation: giro 2s 1;
+    animation: giro 2s 1;
 }
 
-@keyframes inputHighlighter {
+.cardBox:nth-child(4) .card {
+    -webkit-animation: giro 2.5s 1;
+    animation: giro 2.5s 1;
+}
+
+@-webkit-keyframes giro {
     from {
-        background: #000;
+        transform: rotateY(180deg);
     }
 
     to {
-        width: 0;
-        background: transparent;
+        transform: rotateY(0deg);
     }
 }
 
-.link {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    padding: 20px;
-
-    a {
-        display: flex;
-        align-items: center;
-        text-decoration: none;
-        color: #000;
+@keyframes giro {
+    from {
+        transform: rotateY(180deg);
     }
 
-    .fa {
-        font-size: 28px;
-        margin-right: 8px;
-        color: #000;
+    to {
+        transform: rotateY(0deg);
     }
 }
 
+@media screen and (max-width: 767px) {
+    .boxesContainer {
+        display: block;
+        /* Cambio a display block para apilar los elementos */
+    }
 
-/*ddd*/
-.dropdown {
+    .cardBox {
+        width: 94%;
+        /* Ajusta este valor según necesites */
+        margin: 10px auto;
+        /* Centra las tarjetas y añade un poco de margen entre ellas */
+        float: none;
+        /* Anula el float de los .cardBox */
+    }
+
+    .card {
+        height: 285px;
+        /* Puedes ajustar la altura según necesites */
+    }
+
+    /* Elimina margin-bottom del último .cardBox si es necesario */
+    .cardBox:last-child {
+        margin-bottom: 10px;
+        /* Ajusta según necesites */
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .cardBox {
+        width: 94.5%;
+    }
+
+    .card {
+        height: 260px;
+    }
+}
+
+/*perfiles*/
+.informacion-adicional {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-out;
+}
+
+
+.contenedor-tarjetas {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 
-
-
-#selectService option {
-    font-size: 14px;
-    padding: 5px 10px;
-    /* Padding horizontal y vertical */
+.tarjeta {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    max-width: 640px;
+    margin: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    overflow: hidden;
+    transition: box-shadow 0.3s ease;
 }
 
-#selectService option:hover {
-    font-size: 16px;
-    padding: 10px 10px 10px 5px;
-    display: block;
+.tarjeta:hover {
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+.contenedor-imagen {
     width: 100%;
-    border: none;
-    border-bottom: 1px solid #515151;
-    background: transparent;
 }
 
-#selectService option:checked {
-    font-size: 16px;
-    padding: 10px 10px 10px 5px;
-    display: block;
+.contenedor-imagen img {
     width: 100%;
-    border: none;
-    border-bottom: 1px solid #515151;
-    background: transparent;
+    height: auto;
+    object-fit: cover;
 }
 
+.contenido-texto {
+    padding: 15px;
+}
+
+.contenido-texto h2 {
+    font-size: 5vw;
+}
+
+.contenido-texto p {
+    font-size: 3.5vw;
+}
+
+.ver-mas {
+    font-size: 3.5vw;
+    color: #007bff;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
+.ver-mas:hover {
+    color: #0056b3;
+}
+
+@media (min-width: 768px) {
+    .tarjeta {
+        flex-direction: row;
+        align-items: flex-start;
+    }
+
+    .contenedor-imagen {
+        flex: 0 0 250px;
+    }
+
+    .contenido-texto {
+        flex: 1;
+        padding: 20px;
+    }
+
+    .contenido-texto h2,
+    .contenido-texto p,
+    .ver-mas {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .contenido-texto h2 {
+        font-size: 6vw;
+    }
+
+    .contenido-texto p,
+    .ver-mas {
+        font-size: 4vw;
+    }
+}
