--- a/src/app/layout/home-slider/home-slider.component.css
+++ b/src/app/layout/home-slider/home-slider.component.css
@@ -7,7 +7,15 @@
     justify-content: center;
 }
 
-
+.fade-in-text {
+    font-family: Arial;
+    font-size: 150px;
+    animation: fadeIn 5s;
+  }
+  @keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
 .title {
     position: absolute;
     top: 30%;
