--- a/src/app/layout/home-slider/home-slider.component.html
+++ b/src/app/layout/home-slider/home-slider.component.html
@@ -1,6 +1,6 @@
 <div class="banner">
-    <div class="title">
-        <div>
+    <div class="title , fade-in-text">
+        <div class="">
             <p class="arquitectura">2024 - Arquitectura</p>
             <h2>Diseño</h2>
             <h2>Avanzado</h2>
