--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,14 +1,14 @@
 <div class="banner">
     <div class="fade-in-text">
-    
+
     <h1>Sobre Nosotros</h1>
-</div>
+    </div>
 </div>
 
-  <div  class="boxesContainer">
+<div class="boxesContainer">
 
     <div class="cardBox">
-        <div class="card">
+        <div class="card" >
             <div class="front">
                 <h3>Objetivo</h3>
 
@@ -55,15 +55,28 @@
     <!-- Tarjeta 1 -->
     <div class="tarjeta" #tarjeta1 (click)="toggleInfo(tarjeta1)">
         <div class="contenedor-imagen">
-            <img src="tu_foto_1.jpg" alt="Nombre Persona" class="foto">
+            <img src="../../../assets/R - Editado.png" alt="Nombre Persona" class="foto">
         </div>
         <div class="contenido-texto">
-            <h2>Nombre Persona 1</h2>
-            <p class="descripcion-breve">Breve descripción aquí...</p>
+            <h2>Jhoana Sonzogni</h2>
+            <p class="descripcion-breve">Arquitecta recibida de la
+                Universidad de Flores (Sede
+                Comahue) en Cipolletti, Río
+                Negro (2017)</p>
             <div class="informacion-adicional">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A suscipit beatae nesciunt? Eos id
-                    corrupti expedita impedit cupiditate, voluptates cum perspiciatis pariatur facere aliquid
-                    voluptate recusandae, possimus aliquam nobis ipsam.</p>
+                <p>Desde el 2015 desempeña su
+                    actividad profesional como
+                    colobaradora y asociada de
+                    proyectos para estudios de
+                    arquitectura y empresas
+                    constructoras de la región.
+                    En el año 2018 conforma el
+                    estudio de Arquitectura DSP
+                    Arquitectos donde cumple su
+                    principal funcion como
+                    Proyectista, Ejecución de
+                    documentación técnica y
+                    Directora de obras.</p>
                 <!-- Agrega más contenido aquí según sea necesario -->
             </div>
             <a href="javascript:void(0);" class="ver-mas">Ver más</a>
@@ -73,13 +86,38 @@
     <!-- Tarjeta 2 -->
     <div class="tarjeta" #tarjeta2 (click)="toggleInfo(tarjeta2)">
         <div class="contenedor-imagen">
-            <img src="tu_foto_2.jpg" alt="Nombre Persona" class="foto">
+            <img src="../../../assets/R - Editado.png" alt="Nombre Persona" class="foto">
         </div>
         <div class="contenido-texto">
-            <h2>Nombre Persona 2</h2>
-            <p class="descripcion-breve">Breve descripción aquí...</p>
+            <h2>Sebastían Dromaz</h2>
+            <p class="descripcion-breve">Arquitecto recibido de la
+                Universidad de Flores (Sede
+                Comahue) en Cipolletti, Río
+                Negro (2010)</p>
             <div class="informacion-adicional">
-                <p>Información adicional aquí...</p>
+                <p>Formó parte de equipos de
+                    proyecto desde el 2005 al
+                    2012 produciendo
+                    documentación ténica,
+                    proyectista y posteriormente
+                    gestionando obras para
+                    estudios de arquitectura del
+                    alto valle rionegrino.
+                    Entre el 2012 y el 2018
+                    desempeña su profesión de
+                    manera independiente
+                    comprendiendo obras de
+                    pequeña y mediana escala
+                    en el ámbito público y
+                    privado.
+                    En el año 2018 conforma el
+                    estudio de Arquitectura DSP
+                    Arquitectos donde cumple
+                    su principal Rol como
+                    Proyectista, Ejecución de
+                    documentación técnica y
+                    Director Administrador de
+                    Obras.</p>
                 <!-- Agrega más contenido aquí según sea necesario -->
             </div>
             <a href="javascript:void(0);" class="ver-mas">Ver más</a>
@@ -89,13 +127,30 @@
     <!-- Tarjeta 3 -->
     <div class="tarjeta" #tarjeta3 (click)="toggleInfo(tarjeta3)">
         <div class="contenedor-imagen">
-            <img src="tu_foto_3.jpg" alt="Nombre Persona" class="foto">
+            <img src="../../../assets/R - Editado.png" alt="Nombre Persona" class="foto">
         </div>
         <div class="contenido-texto">
-            <h2>Nombre Persona 3</h2>
-            <p class="descripcion-breve">Breve descripción aquí...</p>
+            <h2>Nicolas Pojmaevich</h2>
+            <p class="descripcion-breve">Arquitecto recibido de la
+                Universidad de Flores (Sede
+                Comahue) en Cipolletti, Río
+                Negro (2010)</p>
             <div class="informacion-adicional">
-                <p>Información adicional aquí...</p>
+                <p>Trabajó como colaborador de
+                    documentaciones ejecutivas y
+                    director de obra para diversos
+                    profesionales de la zona.
+                    Especialización en visualización
+                    arquitectónica, desarrollando
+                    imágenes realisticas para el
+                    interior y exterior del país.
+                    En el año 2018 conforma el
+                    estudio de Arquitectura DSP
+                    Arquitectos donde cumple su
+                    principal funcion como
+                    Proyectista, Ejecución de
+                    documentación técnica y
+                    Directora de obras.</p>
                 <!-- Agrega más contenido aquí según sea necesario -->
             </div>
             <a href="javascript:void(0);" class="ver-mas">Ver más</a>
