--- a/src/app/pages/contact/contact.component.css
+++ b/src/app/pages/contact/contact.component.css
@@ -9,11 +9,11 @@
 }
 
 .contact-form {
-    position: relative;
+    position: absolute;
     width: 90%;
-    height: 80%;
+    height: 55%;
     display: flex;
-    background: #F2E9DF;
+    background: #ffffffb1;
     margin: 6rem 0 0 0;
     border-radius: 10px;
     padding: 5px;
@@ -43,13 +43,13 @@
 
 .contact-form .first-container .info-container p {
     color: #fff;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 400;
     padding-bottom: 10px;
 }
 
 .contact-form .first-container .info-container div p {
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.6;
     color: #fff;
 }
@@ -60,7 +60,6 @@
 
 .form-group {
     display: flex;
-    margin: 20px;
 }
 
 .form-group .group {
@@ -68,27 +67,34 @@
 }
 
 .group {
-    margin: 40px;
+    margin: 20px;
 }
 
 @media screen and (max-width: 1628px) {
+  
+
     .contact-form {
         width: 90%;
+        height: 55%;
+    }
+    .i{
+        margin-right: 10px;
     }
 }
+
 
 @media screen and (max-width: 700px) {
     .contact-form {
         flex-direction: column-reverse;
+       height: 700px;
+
+
     }
 
-    .contact-form>* {
-        width: 100%;
+    .i{
+        margin-right: 10px;
     }
 
-    .contact-form .first-container {
-        padding: 40px 0;
-    }
 }
 
 /*INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT-INPUT*/
@@ -240,3 +246,4 @@ label {
     border-bottom: 1px solid #515151;
     background: transparent;
 }
+
