--- a/src/app/pages/proyectos/proyectos.component.html
+++ b/src/app/pages/proyectos/proyectos.component.html
@@ -1,5 +1,7 @@
 <div class="banner">
-    <h1>Proyectos</h1>
+    <div class="fade-in-text">
+        <h1>Proyectos</h1>
+    </div>
 </div>
 <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" style="margin-bottom: 100px;">
     <div class="carousel-inner">
