--- a/src/app/pages/contact/contact.component.css
+++ b/src/app/pages/contact/contact.component.css
@@ -17,6 +17,7 @@
     margin: 6rem 0 0 0;
     border-radius: 10px;
     padding: 5px;
+    margin-bottom: 100px;
 }
 
 .contact-form .first-container {
