--- a/src/app/pages/contact/contact.component.css
+++ b/src/app/pages/contact/contact.component.css
@@ -18,6 +18,7 @@
     border-radius: 10px;
     padding: 5px;
     margin-bottom: 100px;
+    margin-top: 150px;
 }
 
 .contact-form .first-container {
