--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -13,12 +13,18 @@
     font-family: Arial;
     font-size: 150px;
     animation: fadeIn 5s;
-  }
-  
-  @keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-  }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 .banner h1 {
     font-size: 30px;
     font-weight: 300;
@@ -34,6 +40,7 @@
     align-items: center;
     justify-content: center;
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .cardBox {
@@ -202,6 +209,7 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    margin-bottom: 100px;
 }
 
 .tarjeta {
@@ -245,13 +253,13 @@
 
 .ver-mas {
     font-size: 3.5vw;
-    color: #007bff;
+    color: #d9a571;
     cursor: pointer;
     transition: color 0.3s ease;
 }
 
 .ver-mas:hover {
-    color: #0056b3;
+    color: #96704b;
 }
 
 @media (min-width: 768px) {
