--- a/src/app/layout/home-slider/home-slider.component.html
+++ b/src/app/layout/home-slider/home-slider.component.html
@@ -1,7 +1,7 @@
 <div class="banner">
     <div class="title , fade-in-text">
-        <div class="">
-            <p class="arquitectura">2024 - Arquitectura</p>
+        <div >
+            <p class="arquitectura"></p>
             <h2>Diseño</h2>
             <h2>Avanzado</h2>
         </div>
@@ -10,23 +10,23 @@
 
     <main>
         <ul class='slider' id="slide">
-            <li class='item' style="background-image: url(../../../assets/carrucel1.jpg)">
+            <li class='item' style="background-image: url(../../../assets/carrucel/Casa_NIS_05.jpg)">
                 <div class='content'>
                 </div>
             </li>
-            <li class='item' style="background-image: url(../../../assets/carrucel2.jpg)">
+            <li class='item' style="background-image: url(../../../assets/carrucel/Casa_FL_Ext_01A.jpg)">
                 <div class='content'>
                 </div>
             </li>
-            <li class='item' style="background-image: url(../../../assets/carrucel3.jpg)">
+            <li class='item' style="background-image: url(../../../assets/carrucel/Locales_Plottier_Susana_Esq02_05.jpg)">
                 <div class='content'>
                 </div>
             </li>
-            <li class='item' style="background-image: url(../../../assets/carrucel4.5.jpg)">
+            <li class='item' style="background-image: url(../../../assets/carrucel/Maurin_Sarrat_V05_cam\ 01B\ ext.jpg)">
                 <div class='content'>
                 </div>
             </li>
-            <li class='item' style="background-image: url(../../../assets/carrucel5.jpg)">
+            <li class='item' style="background-image: url(../../../assets/carrucel/Oficinas_Maipu_02.jpg)">
                 <div class='content'>
                 </div>
             </li>
