--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
         <p>BIM (Modelado de Información de Construcción) es una metodología de trabajo que utiliza modelos digitales 3D
             para planificar, diseñar, construir y administrar edificios e infraestructuras. Permite la colaboración
             eficiente entre profesionales, mejora la precisión y optimiza la gestión de proyectos de construcción.</p>
-        <img src="../../../assets/content1.png" alt="Edificio en construcción">
+        <img src="../../../assets/foto1home.png" alt="Edificio en construcción">
     </div>
 
     <div class="section">
@@ -13,7 +13,7 @@
         <p>En DSP BIM, somos pioneros en ofrecer soluciones de Diseño BIM. Nuestro equipo combina experiencia técnica y
             creatividad para transformar ideas en realidad, asegurando eficiencia y precisión en cada proyecto.</p>
         <p>Nos dedicamos a modelar, diseñar y optimizar espacios con la más avanzada tecnología BIM.</p>
-        <img src="../../../assets/carrucel4.5.jpg" alt="Casa modelo">
+        <img src="../../../assets/foto2home.png" alt="Casa modelo">
     </div>
 
     <!-- Nuevo contenido -->
@@ -31,7 +31,7 @@
                 económicos.</li>
         </ul>
         <a href="nosotros">Más sobre nosotros</a>
-        <img src="../../../assets/carrucel5.jpg" alt="Diseño de departamentos">
+        <img src="../../../assets/foto3home.png" alt="Diseño de departamentos">
     </div>
 </div>
 
