--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -55,7 +55,7 @@
     <!-- Tarjeta 1 -->
     <div class="tarjeta" #tarjeta1 (click)="toggleInfo(tarjeta1)">
         <div class="contenedor-imagen">
-            <img src="../../../assets/R - Editado.png" alt="Nombre Persona" class="foto">
+            <img style="filter: grayscale(80%);" src="../../../assets/nosotros/jhoi2.png" alt="Nombre Persona" class="foto">
         </div>
         <div class="contenido-texto">
             <h2>Jhoana Sonzogni</h2>
@@ -86,7 +86,7 @@
     <!-- Tarjeta 2 -->
     <div class="tarjeta" #tarjeta2 (click)="toggleInfo(tarjeta2)">
         <div class="contenedor-imagen">
-            <img src="../../../assets/R - Editado.png" alt="Nombre Persona" class="foto">
+            <img style="filter: grayscale(80%);" src="../../../assets/nosotros/sebastian5.png" alt="Nombre Persona" class="foto">
         </div>
         <div class="contenido-texto">
             <h2>Sebastían Dromaz</h2>
@@ -127,7 +127,7 @@
     <!-- Tarjeta 3 -->
     <div class="tarjeta" #tarjeta3 (click)="toggleInfo(tarjeta3)">
         <div class="contenedor-imagen">
-            <img src="../../../assets/R - Editado.png" alt="Nombre Persona" class="foto">
+            <img style="filter: grayscale(80%);" src="../../../assets/nosotros/nicolas2.png" alt="Nombre Persona" class="foto">
         </div>
         <div class="contenido-texto">
             <h2>Nicolas Pojmaevich</h2>
