--- a/src/app/layout/home-slider/home-slider.component.html
+++ b/src/app/layout/home-slider/home-slider.component.html
@@ -2,8 +2,7 @@
     <div class="title , fade-in-text">
         <div >
             <p class="arquitectura"></p>
-            <h2>Diseño</h2>
-            <h2>Avanzado</h2>
+            <h1>DSP</h1>
         </div>
         <h1>BIM</h1>
     </div>
