--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,14 +1,14 @@
 <div class="banner">
     <div class="fade-in-text">
 
-    <h1>Sobre Nosotros</h1>
+        <h1>Sobre Nosotros</h1>
     </div>
 </div>
 
 <div class="boxesContainer">
 
     <div class="cardBox">
-        <div class="card" >
+        <div class="card">
             <div class="front">
                 <h3>Objetivo</h3>
 
@@ -55,7 +55,8 @@
     <!-- Tarjeta 1 -->
     <div class="tarjeta" #tarjeta1 (click)="toggleInfo(tarjeta1)">
         <div class="contenedor-imagen">
-            <img style="filter: grayscale(80%);" src="../../../assets/nosotros/jhoi2.png" alt="Nombre Persona" class="foto">
+            <img style="filter: grayscale(80%);" src="../../../assets/nosotros/jho.png" alt="Nombre Persona"
+                class="foto">
         </div>
         <div class="contenido-texto">
             <h2>Jhoana Sonzogni</h2>
@@ -86,7 +87,8 @@
     <!-- Tarjeta 2 -->
     <div class="tarjeta" #tarjeta2 (click)="toggleInfo(tarjeta2)">
         <div class="contenedor-imagen">
-            <img style="filter: grayscale(80%);" src="../../../assets/nosotros/sebastian5.png" alt="Nombre Persona" class="foto">
+            <img style="filter: grayscale(80%);" src="../../../assets/nosotros/Seb.png" alt="Nombre Persona"
+                class="foto">
         </div>
         <div class="contenido-texto">
             <h2>Sebastían Dromaz</h2>
@@ -127,7 +129,8 @@
     <!-- Tarjeta 3 -->
     <div class="tarjeta" #tarjeta3 (click)="toggleInfo(tarjeta3)">
         <div class="contenedor-imagen">
-            <img style="filter: grayscale(80%);" src="../../../assets/nosotros/nicolas2.png" alt="Nombre Persona" class="foto">
+            <img style="filter: grayscale(80%);" src="../../../assets/nosotros/nic.png" alt="Nombre Persona"
+                class="foto">
         </div>
         <div class="contenido-texto">
             <h2>Nicolas Pojmaevich</h2>
