--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -87,8 +87,7 @@
     <!-- Tarjeta 2 -->
     <div class="tarjeta" #tarjeta2 (click)="toggleInfo(tarjeta2)">
         <div class="contenedor-imagen">
-            <img style="filter: grayscale(80%);" src="../../../assets/nosotros/Seb.png" alt="Nombre Persona"
-                class="foto">
+            <img src="../../../assets/nosotros/Seb.png" alt="Nombre Persona" class="foto">
         </div>
         <div class="contenido-texto">
             <h2>Sebastían Dromaz</h2>
