--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -55,8 +55,7 @@
     <!-- Tarjeta 1 -->
     <div class="tarjeta" #tarjeta1 (click)="toggleInfo(tarjeta1)">
         <div class="contenedor-imagen">
-            <img style="filter: grayscale(80%);" src="../../../assets/nosotros/jho.png" alt="Nombre Persona"
-                class="foto">
+            <img src="../../../assets/nosotros/jho.png" alt="Nombre Persona" class="foto">
         </div>
         <div class="contenido-texto">
             <h2>Jhoana Sonzogni</h2>
@@ -128,8 +127,7 @@
     <!-- Tarjeta 3 -->
     <div class="tarjeta" #tarjeta3 (click)="toggleInfo(tarjeta3)">
         <div class="contenedor-imagen">
-            <img style="filter: grayscale(80%);" src="../../../assets/nosotros/nic.png" alt="Nombre Persona"
-                class="foto">
+            <img src="../../../assets/nosotros/nic.png" alt="Nombre Persona" class="foto">
         </div>
         <div class="contenido-texto">
             <h2>Nicolas Pojmaevich</h2>
